# formbuilder

./: .gitignore  CMakeLists.txt  DEVELOPMENT  README.md
src/: CMakeLists.txt  FormBuilder.pro  aboutdialog.cpp  appicon.rc  attributes.cpp  attributes.h  auth.cpp  auth.h  datetimedialog.cpp  dialogabout.cpp  dialogfieldmanager.cpp  dialoglists.cpp  dialognewvoid.cpp  dialogngw.cpp  dialogngwlayer.cpp  dialogngwproject.cpp  dialogprogress.cpp  dlistvaluesdialog.cpp  elements.cpp  elements.h  factories.cpp  factories.h  factory.cpp  factory.h  fb.cpp  fb.h  fb.ui  fb_common.h  fb_general.h  fbclickablelabel.cpp  fbclickablelabel.h  fbupdater.cpp  fbupdater.h  fieldmanagerdialog.cpp  forappicon.rc  form.cpp  form.h  formbuilder.cpp  formbuilder.h  formbuilder.ui  (+15 more)
src/cmake/: CPackOptions.cmake.in
src/core/: CMakeLists.txt  all_registry.h  attr.cpp  attr.h  attr_registrar.cpp  attr_registrar.h  datetime_types.h  elem.cpp  elem.h  elem_registrar.cpp  elem_registrar.h  field.cpp  field.h  field_types.h  fieldslot_registrar.cpp  fieldslot_registrar.h  geom_types.h  layer.cpp  layer.h  project.cpp  project.h  srs_types.h
src/core/attributes/: boolean.cpp  boolean.h  datetime.cpp  datetime.h  datetimeenum.cpp  datetimeenum.h  depdoubleitems.cpp  depdoubleitems.h  doubleitems.cpp  doubleitems.h  enum.cpp  enum.h  globaltextenum.cpp  globaltextenum.h  number.cpp  number.h  string.cpp  string.h  stringlist.cpp  stringlist.h  tripleitems.cpp  tripleitems.h
src/core/elements/: average_counter.cpp  average_counter.h  checkbox.cpp  checkbox.h  combobox.cpp  combobox.h  coordinates.cpp  coordinates.h  counter.cpp  counter.h  datetimepicker.cpp  datetimepicker.h  depcomboboxes.cpp  depcomboboxes.h  dmeter.cpp  dmeter.h  label.cpp  label.h  ngmform.cpp  ngmform.h  photo.cpp  photo.h  radiogroup.cpp  radiogroup.h  signfield.cpp  signfield.h  splitcombobox.cpp  splitcombobox.h  tabs.cpp  tabs.h  textedit.cpp  textedit.h  voidspace.cpp  voidspace.h
src/desktop/: CMakeLists.txt  app_icon.rc  fb_aboutdialog.cpp  fb_aboutdialog.h  fb_aboutdialog.ui  fb_authdialog.cpp  fb_authdialog.h  fb_authdialog.ui  fb_project.cpp  fb_project.h  fb_updater.cpp  fb_updater.h  fb_window.cpp  fb_window.h  languages.h  main.cpp  version.txt
src/desktop/data/: data.qrc  devices.json  fb.icns  img_authors.txt  line.qml  pnt.qml  poly.qml
src/desktop/translations/: fb_ru_RU.ts
src/elements/: CMakeLists.txt  attributes.cpp  attributes.h  elements.cpp  elements.h  factories.cpp  factories.h
src/form/: CMakeLists.txt  attributes.cpp  attributes.h  dialogcsv.cpp  dialogdatetime.cpp  dialogdlistvalues.cpp  dialoglistvalues.cpp  dialogngwlookup.cpp  elements.cpp  elements.h  factories.cpp  factories.h  form_core.cpp  form_core.h  registrar.cpp
src/gui/: CMakeLists.txt  all_registry.h  attrwatcher.cpp  attrwatcher.h  attrwatcher_registrar.cpp  attrwatcher_registrar.h  color_themes.h  comboitemsdialog.cpp  comboitemsdialog.h  commontablewidget.cpp  commontablewidget.h  csvcolumnsdialog.cpp  csvcolumnsdialog.h  custom_dialog.cpp  custom_dialog.h  custom_scrollarea.cpp  custom_scrollarea.h  custom_spinbox.cpp  custom_spinbox.h  elemtreewidget.cpp  elemtreewidget.h  fieldstablewidget.cpp  fieldstablewidget.h  fieldstablewidget2.cpp  fieldstablewidget2.h  gui_common.h  gui_globals.cpp  gui_globals.h  inputtablewidget.cpp  inputtablewidget.h  itemsdialog.cpp  itemsdialog.h  itemstablewidget.cpp  itemstablewidget.h  itemstablewidget.qss  itemswidget.cpp  itemswidget.h  mainwindow.cpp  mainwindow.h  propstablewidget.cpp  (+4 more)
src/gui/attrwatchers/: boolean_watcher.cpp  boolean_watcher.h  datetime_watcher.cpp  datetime_watcher.h  depdoubleitems_watcher.cpp  depdoubleitems_watcher.h  doubleitems_watcher.cpp  doubleitems_watcher.h  enum_watcher.cpp  enum_watcher.h  globaltextenum_watcher.cpp  globaltextenum_watcher.h  number_watcher.cpp  number_watcher.h  pagelist_watcher.cpp  pagelist_watcher.h  string_watcher.cpp  string_watcher.h  tripleitems_watcher.cpp  tripleitems_watcher.h
src/gui/dialogs/: csvcolumnsdialog.cpp  csvcolumnsdialog.h  depdoubleitemsdialog.cpp  depdoubleitemsdialog.h  doubleitemsdialog.cpp  doubleitemsdialog.h  layerdialog.cpp  layerdialog.h  layerdialog2.cpp  layerdialog2.h  newvoidprojectdialog.cpp  newvoidprojectdialog.h  newvoidprojectdialog.ui  ngwdialog.cpp  ngwdialog.h  ngwdialog.ui  prefixdialog.cpp  prefixdialog.h  tabpagesdialog.cpp  tabpagesdialog.h  translations_dialog.cpp  translations_dialog.h  tripleitemsdialog.cpp  tripleitemsdialog.h
src/gui/images/: images.qrc
src/gui/styles/: styles.qrc  theme_white.qss
src/img/: ngfp.icns
src/mockup/: CMakeLists.txt  all_registry.h  container.cpp  container.h  custom_widget.cpp  custom_widget.h  decorator.cpp  decorator.h  device.cpp  device.h  device.ui  device_data.h  elemview.cpp  elemview.h  elemview_registrar.cpp  elemview_registrar.h  screen.cpp  screen.h  space.cpp  space.h
src/mockup/decorators/: androidanydecorator.cpp  androidanydecorator.h
src/mockup/elemviews/: box_view.cpp  (+25 more)
src/my/: apiwrapper.cpp  apiwrapper.h  auth_confirm.html  auth_confirm_ru.html  user.cpp  user.h
src/project/: CMakeLists.txt  project.cpp  project.h  project_core.cpp  project_core.h  projectgdal.cpp  projectngw.cpp  projects.h  projectshp.cpp  projectvoid.cpp
src/projects/: CMakeLists.txt  dialogngw.h  projects.cpp  projects.h
src/screen/: CMakeLists.txt  devices.h  screen.cpp  screen.h  screen_core.cpp  screen_core.h  screenandroid.cpp  screencommon.cpp  screenios.cpp  screenmobile.cpp  screenqgis.cpp  screens.h  screenweb.cpp
src/serializer/: CMakeLists.txt  ngfp_common.h  ngfp_reader.cpp  ngfp_reader.h  ngfp_writer.cpp  ngfp_writer.h
src/tools/: dialogfieldmanager.cpp
src/translations/: CMakeLists.txt  fb_en_GB.ts  fb_ru_RU.ts  fb_tr_en.ts
src/util/: CMakeLists.txt  common.h  csv_io.cpp  csv_io.h  gdal_dataset_deleter.h  json_io.cpp  json_io.h  ngw_api.cpp  ngw_api.h  ngw_default_io.cpp  ngw_default_io.h  ngw_gdal_io.cpp  ngw_gdal_io.h  ngw_io.cpp  ngw_io.h  ngw_types.h  settings.h  web_worker.cpp  web_worker.h  zip_io.cpp  zip_io.h
(+21 files in other folders)
